# ROS2_Pra

./: .gitignore
.devcontainer/: devcontainer.json
src/a_description/: CMakeLists.txt  package.xml
src/a_description/launch/: controller.launch  controller.yaml  display.launch  display.launch.py  gazebo.launch  ign.launch.py
src/a_description/meshes/: base_link.stl  link_1_1.stl  link_2_1.stl  link_3_1.stl  link_4_1.stl  link_5_1.stl  link_6_1.stl
src/a_description/urdf/: a.gazebo  a.trans  a.xacro  materials.xacro
src/arirobot_interfaces/: CMakeLists.txt  package.xml
src/my_package/: package.xml  setup.py
src/my_package/my_package/: my_node.py
src/test_pkg/: package.xml  setup.py
src/test_pkg/test_pkg/: box_node.py  receive_node.py
